--- a/order-status-service/src/main/resources/application.yml
+++ b/order-status-service/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-spring.application.name=order-status-service
+server:
+  port: 8081
+
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+
+app:
+  kafka:
+    kafkaOrderTopic: "order-topic"
+    kafkaOrderStatusTopic: "order-status-topic"
+    kafkaOrderGroupId: "kafka-order-group-id"
